--- a/app/azmet-shiny-template.html
+++ b/app/azmet-shiny-template.html
@@ -11,7 +11,8 @@
     <!-- link rel="canonical" href="https://azmet.arizona.edu/past-data" /-->
     <!-- link rel="shortlink" href="https://azmet.arizona.edu/node/6" /-->
     <!-- Google tag (gtag.js) -->
-    <!-- Paste new tag/property code for this AZMet Shiny app here -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YY78P3VW6M"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YY78P3VW6M');</script>
     <!-- script src="https://azmet.arizona.edu/sites/default/files/google_tag/az_comprehensive/google_tag.script.js?sact2n" defer></script -->
     <title>Solar Radiation Viewer | Arizona Meteorological Network</title> <!-- Edit this line based on individual Shiny app -->
     <!-- Shiny head code, https://shiny.posit.co/r/articles/build/templates/ -->
